--- a/App.ipynb
+++ b/App.ipynb
@@ -247,6 +247,82 @@
     "                      })\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#### PAGE 1 ####\n",
+    "def Page1(df):\n",
+    "nvar = list(df.columns[((df.dtypes == 'float64')or(df.dtypes == 'int64'))])\n",
+    "corr=df[nvar].corr()\n",
+    "\n",
+    "fig = missingno.matrix(dfl.get_figure())\n",
+    "out_url = fig_to_uri(fig)\n",
+    "\n",
+    "layout= html.Div([\n",
+    "    get_header(),\n",
+    "    get_menu(),\n",
+    "    html.Div([\n",
+    "        html.Div([\n",
+    "        html.H6( children = 'Missing Rate', className='gs-header gs-text-header')\n",
+    "        html.Br(),\n",
+    "        dcc.Graph(\n",
+    "            id='bar-total',\n",
+    "            figure={\n",
+    "                'data': [{'x':df.columns.values,'y':1-df.isnull().mean().values},\n",
+    "                         {'x':df.columns.values, 'y':df.isnull().mean().values }],\n",
+    "                'layout': {'title':'Missing Rate', 'barmode':'stack', 'height': '600px'}}\n",
+    "                )],\n",
+    "            className = 'six columns'), \n",
+    "                \n",
+    "    html.Div([\n",
+    "        html.H6(children='Data Summary', className=\"gs-header gs-text-header \")\n",
+    "        html.Br(),\n",
+    "        html.Br(),\n",
+    "        html.Br(),\n",
+    "        html.Br(),\n",
+    "        html.Div([\n",
+    "            html.Div([\n",
+    "            html.Strong([\"Number of rows :\"])\n",
+    "            ], className=\"four columns right-aligned\"),\n",
+    "            html.Div([\n",
+    "                html.df.shape[0]])\n",
+    "                , style={ 'color':'red' }, className=\"six columns\";\n",
+    "            ], className = 'row')\n",
+    "    ])\n",
+    "    , className = 'six columns')\n",
+    "                \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Display PAGE ####\n",
+    "@app.callback( Output('page-content', 'children'),\n",
+    "            [Input( 'url', 'pathname')], [State('data input', 'children'), State('data input', 'children')])\n",
+    "def display_page(pathname, filename, r_h_s):\n",
+    "    if( pathname == '/' or pathname == '/upload'):\n",
+    "        return UploadData\n",
+    "    else: \n",
+    "        if( pathname == '/overview'):\n",
+    "            df = parser_data(filename)['df']\n",
+    "            colnames = list(df.columns)\n",
+    "            colnames_non_miss = [ x for x in colnames if '_miss' not in x]\n",
+    "            return( Page1( df[colnames_non_miss]))\n",
+    "        \n",
+    "        else: \n",
+    "            return noPage\n"
+   ]
   }
  ],
  "metadata": {
